[gd_scene load_steps=4 format=2]

[ext_resource path="res://Backstage/backstage.gd" type="Script" id=1]
[ext_resource path="res://Backstage/match_music.wav" type="AudioStream" id=2]
[ext_resource path="res://Backstage/round_won.wav" type="AudioStream" id=3]

[node name="Backstage" type="Node"]

script = ExtResource( 1 )

[node name="EndRoundTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Music" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Music"

[node name="RoundWon" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound"

[connection signal="finished" from="Music" to="." method="_on_AudioStreamPlayer_finished"]


